src/objects/Skill_Based_Routing_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Capacity_Weight_Case__c</fullName>
        <label>Capacity Weight Case</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cases_Statuses_Routing_Not_Required__c</fullName>
        <label>Cases Statuses Routing Not Required</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Names_Routing_Not_Required__c</fullName>
        <label>Queue Names Routing Not Required</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Skill Based Routing Setting</label>
    <pluralLabel>Skill Based Routing Settings</pluralLabel>
</CustomObject>